--- a/configure.ac
+++ b/configure.ac
@@ -62,8 +62,8 @@ AC_SUBST([system_acdir], ["\${datadir}/aclocal"])
 # aclocal and automake, hence the remake rules must use those versions
 # as well.  The extra quoting is to cater to cases when the build
 # directory contains whitespace or shell metacharacters.
-ACLOCAL="\"`pwd`/pre-inst-env\" aclocal-$APIVERSION"
-AUTOMAKE="\"`pwd`/pre-inst-env\" automake-$APIVERSION"
+ACLOCAL="\"`pwd`/pre-inst-env\" true"
+AUTOMAKE="\"`pwd`/pre-inst-env\" true"
 
 AC_PROG_LN_S
 
